# gallop

./: .gitignore  Cargo.toml  LICENSE  README.md  all.sh  build.rs  clippy.sh  config.yaml  generate.sh  install.sh  nohup.out  reset_data.sh
actors/coordinator/coordinator/: __main__.py
actors/coordinator/coordinator/protos/: common_pb2.py  indexer_pb2.py  indexer_pb2_grpc.py  packer_pb2.py  packer_pb2_grpc.py
actors/workers/src/core/: mod.rs
actors/workers/src/core/codec/: segment.rs
components/coordinator/: Pipfile
components/coordinator/.legacy/coordinator/: coordinator.py
components/coordinator/coordinator/: __init__.py  __main__.py  coordinator.py  data.py  functions.py
components/coordinator/coordinator/protos/: common_pb2.py  indexer_pb2.py  indexer_pb2_grpc.py  packer_pb2.py  storage_pb2.py  storage_pb2_grpc.py
components/workers/: Cargo.toml  build.rs
components/workers/src/: lib.rs
components/workers/src/core/: config.rs  directory.rs  grpc.rs  mod.rs
components/workers/src/core/codec/: mod.rs  row.rs  segment.rs
components/workers/src/core/directory/: memory.rs
components/workers/src/protos/: mod.rs
front/: Pipfile  front.py  indexer_pb2.py  indexer_pb2_grpc.py
front/protos/: indexer_pb2.py
indexer/: Cargo.toml
indexer/src/protos/: mod.rs
indexer/src/protos/indexer/: indexer.proto
io/: Pipfile
io/coordinator/: __main__.py
io/coordinator/protos/: common_pb2.py  packer_pb2.py
io/gallop/: __init__.py  __main__.py  cli.py  constants.py  wrench.py
io/gallop/cli/: commands.py
io/gallop/graphql/: __init__.py
io/gallop/protos/: common_pb2.py  coordinator_pb2.py  coordinator_pb2_grpc.py  indexer_pb2.py  indexer_pb2_grpc.py  packer_pb2.py  packer_pb2_grpc.py
io/tests/: test_all.py  test_insert.py
protos/: common.proto  coordinator.proto  indexer.proto  packer.proto  storage.proto
src/: client.rs  lib.rs  main.rs  sample.rs
src/callers/: packer.rs
src/clients/: coordinator.rs  packer.rs
src/core/: config.rs  grpc.rs  mod.rs  store.rs
src/core/codec/: mod.rs  node.rs  row.rs  segment.rs
src/core/directory/: memory.rs  mod.rs  os.rs
src/core/grpc/: errors.rs  mod.rs  serve.rs
src/core/index/: mod.rs
src/indexer/: mod.rs
src/protos/: common.rs  coordinator.rs  coordinator_grpc.rs  indexer.rs  indexer_grpc.rs  mod.rs  packer.rs  packer_grpc.rs
src/table/: mod.rs
src/util/: random.rs
(+5 files in other folders)
